--- a/src/app/features/proofs/poe/proof-poe.component.html
+++ b/src/app/features/proofs/poe/proof-poe.component.html
@@ -212,7 +212,7 @@
           <span class="pl-3 pr-3 pt-2 pb-2 badge badge-pill badge-primary"
             style="font-size: 14px;background-color: #F3F1FF;color:#818E94;font-weight: 700;"><i
               class="far {{ transactionData.Status == 'BC Hash & DB Hash match.' ? 'fa-check-circle status-text-matched' : 'fa-times-circle status-text-not-matched' }} mr-1"
-              style="font-size: 18px;"></i>{{transactionData.Status == 'BC Hash & DB Hash match.' ?"BC Hash & DB Hash matched":"BC Hash & DB Hash did not match"}}</span>
+              style="font-size: 18px;"></i>{{transactionData.Status == 'BC Hash & DB Hash match.' ?"Success":"Error"}}</span>
         </div>
       </div>
 
