--- a/src/app/features/proofs/poe/proof-poe.component.html
+++ b/src/app/features/proofs/poe/proof-poe.component.html
@@ -147,6 +147,17 @@
           *ngIf="item.key != 'photos'">
           {{item.key}}
         </div>
+        <div class="col-sm-12 col-md-3  col-lg-3  pl-md-4  pt-3 pt-md-0 trasactionDataMobileResponsive" style="font-size: 18px; font-weight:500;"
+        *ngIf="item.key == 'photos'">
+        {{"Images"}}
+      </div>
+      <div class="col-sm-12 col-md-9 col-lg-9 align-item-center" style=" overflow-y: auto; max-height:150px;"  *ngIf="item.key == 'photos'" >
+        <div class="row align-self-center " *ngIf="isObject(item.value)">
+          <div class="col-sm-12 col-md-8 col-lg-9 align-self-center" style=" font-size: 14px;  overflow-wrap:break-word;"  >
+            <p>  {{"True"}}</p>
+          </div>
+        </div>
+      </div>
         <div class="col-sm-12 col-md-9 col-lg-9 align-item-center" style=" overflow-y: auto; max-height:150px;" >
           <div class="row align-self-center " *ngIf="!isObject(item.value)">
             <div class="col-sm-12 col-md-8 col-lg-9 align-self-center" style=" font-size: 14px;  overflow-wrap:break-word;"  >
@@ -155,7 +166,6 @@
           </div>
           <div *ngIf="isObject(item.value)">
           <div class="row align-self-center"  *ngFor="let subItem of item.value  | keyvalue" style="overflow-y: auto; "> 
-            
             <div class="col-sm-12 col-md-6 col-lg-6 align-item-center" style=" font-size: 14px; font-weight:420; overflow-wrap:break-word; "
              *ngIf="item.key != 'photos'">
               <p>{{subItem.key}} :</p> 
@@ -165,7 +175,6 @@
             </div>
           </div>
         </div>
-        
         </div>
       </div>
       <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='transactionData.Txnhash'>
