--- a/src/app/features/transaction-details/transaction-details.component.html
+++ b/src/app/features/transaction-details/transaction-details.component.html
@@ -31,9 +31,8 @@
     </div>
     <div class="col-12 col-md-12 pb-3 ml-0 pt-md-4 pl-md-4 pr-md-4" style="background-color: white;">
     <div class="col-xs-12 col-md-12 mt-3 mt-md-4">
-      <div class="col-xs-12 col-md-12 text-left pt-2 pb-1"
+      <div class="col-xs-12 col-md-12 text-left  pb-1"
         style="background-color: white; border-bottom: 0.5px solid #dee2e6;">
-        <h2 style="font-weight: 500;color: #2D2F39;font-size: 28px;">Transaction Data</h2>
         <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf="txnItem.txnHash">
           <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
             Transaction Hash
