TRAC-3422 Error handling removed

--- a/src/app/features/proof-verification/verification-screen/verification-screen.component.html
+++ b/src/app/features/proof-verification/verification-screen/verification-screen.component.html
@@ -17,10 +17,10 @@
         <ng-template #ProofDemoDirective></ng-template>
       </div>
   </div>
-  <div class="container" *ngIf="loadingComplete && errorOccurred">
+  <!-- <div class="container" *ngIf="loadingComplete && errorOccurred">
     <app-error-id [errorType]="error.errorType" [errorTitle]="error.errorTitle" [errorMessage]="error.errorMessage"
       [errorMessageSecondary]="error.errorMessageSecondary">
     </app-error-id>
-  </div>
+  </div> -->
 </div>
 <app-footer></app-footer>
