--- a/src/app/features/proof-verification/verification-screen/verification-screen.component.css
+++ b/src/app/features/proof-verification/verification-screen/verification-screen.component.css
@@ -16,7 +16,7 @@
     overflow-y: hidden;
     overflow-x: scroll;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: stretch;
     padding: 4% 0% 4% 4%;
     -webkit-box-shadow: -10px 0px 13px -7px #000000,
