TRAC-3422 CSS warnings fixed

--- a/src/app/features/proof-verification/components/site-screen/site-screen.component.css
+++ b/src/app/features/proof-verification/components/site-screen/site-screen.component.css
@@ -113,7 +113,7 @@
   font-size: 12px;
   display: flex;
   width: 100%;
-  justify-content: start;
+  justify-content: flex-start;
   border: 0px;
   margin: 0;
   padding: 4px 20px 4px 10px;
