--- a/src/app/features/proof-verification/verification-screen/verification-screen.component.css
+++ b/src/app/features/proof-verification/verification-screen/verification-screen.component.css
@@ -1,28 +1,63 @@
 #globalInformation {
-    min-height: 32vh;
     width: 100%;
-    border: 1px solid rgba(204, 204, 204, 0.459);
-    padding: 4% 0% 4% 4%;
-    -webkit-box-shadow: 0px 10px 13px -7px #000000,
-    -50px -49px 0px -28px rgba(0, 0, 0, 0);
-    box-shadow: 0px 10px 13px -7px #000000,
-    -50px -49px 0px -28px rgba(0, 0, 0, 0);
-}
-
-#verificationScreen {
-    height: 64vh;
-    width: 100%;
+    display: flex;
+    flex-direction: column;
     margin-top: 2vh;
     overflow-y: hidden;
-    overflow-x: scroll;
+    overflow-x: hidden;
+    display: flex;
+    justify-content: flex-start;
+    background-color: white;
+    padding: 3%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+
+#globalInformation .card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+#globalInformation #frames {
+    height: 100%;
+    width: 100%;
+    margin-top: 10px;
+    overflow-y: hidden;
+    overflow-x: auto;
     display: flex;
     justify-content: flex-start;
     align-items: stretch;
-    padding: 4% 0% 4% 4%;
-    -webkit-box-shadow: -10px 0px 13px -7px #000000,
-    10px 0px 13px -7px #000000,
-    -50px -49px 0px -28px rgba(0, 0, 0, 0);
-    box-shadow: -10px 0px 13px -7px #000000,
-    10px 0px 13px -7px #000000,
-    -50px -49px 0px -28px rgba(0, 0, 0, 0);
 }
+
+#verificationScreen {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-top: 2vh;
+    overflow-y: hidden;
+    overflow-x: hidden;
+    display: flex;
+    justify-content: flex-start;
+    background-color: white;
+    padding: 3%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+
+#verificationScreen .card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+#verificationScreen #frames {
+    height: 100%;
+    width: 100%;
+    margin-top: 10px;
+    overflow-y: hidden;
+    overflow-x: auto;
+    display: flex;
+    justify-content: flex-start;
+    align-items: stretch;
+}
+
+/* #verificationScreen #frames > * {
+   margin-left: 4%;
+} */
