--- a/src/app/shared/components/error-id/error-id.component.html
+++ b/src/app/shared/components/error-id/error-id.component.html
@@ -1,15 +1,15 @@
-<div class="text-center mt-5">
+<div class="container text-center mt-5">
     <div class="row mt-5">
         <div class="col-12">
             <h3 class="primary-font">{{errorTitle | uppercase}}</h3>
         </div>
     </div>
-    <div class="row mb-3">
+    <div class="row mb-3 text-center">
         <div class="col-12">
             <img style="height: 35vh;" src="{{errorImage}}" alt="Error Occured" />
         </div>
     </div>
-    <div class="row ml-2 mr-2">
+    <div class="row text-center ml-2 mr-2">
         <div class="col-12  ">
             <h5 class="primary-font">{{errorMessage}}</h5>
         </div>
