TRAC-3496 margins chanage in error page

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="row content-area text-center" *ngIf="loadingComplete && errorOccurred">
-            <div class="col-12">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <app-error-id [errorType]="error.errorType" [errorTitle]="error.errorTitle"
                 [errorMessage]="error.errorMessage" [errorMessageSecondary]="error.errorMessageSecondary">
             </app-error-id>
