--- a/src/app/features/proof-verification/components/site-screen/site-screen.component.html
+++ b/src/app/features/proof-verification/components/site-screen/site-screen.component.html
@@ -1,10 +1,15 @@
-<div id="siteScreen" [@spinAnimation]>
+<div id="siteScreen" [@screenAnimation]>
   <div id="browser">
     <div class="header">
       <div class="input-group">
         <div class="input-group-text" id="basic-addon1">
           <i class="bi bi-globe2"></i>
-          <span tabindex="0" data-toggle="tooltip" title="Open in new window" (click)="openInNewWindowFn()">
+          <span
+            tabindex="0"
+            data-toggle="tooltip"
+            title="Open in new window"
+            (click)="openInNewWindowFn()"
+          >
             <input
               type="text"
               class="form-control form-control-sm border-0"
@@ -14,13 +19,29 @@
               aria-describedby="basic-addon1"
             />
           </span>
-          <span tabindex="0" data-toggle="tooltip" title="Zoom In" (click)="scaleFn(1)">
+          {{ActionDescription}}
+          <span
+            tabindex="0"
+            data-toggle="tooltip"
+            title="Zoom In"
+            (click)="scaleFn(1)"
+          >
             <i class="bi bi-zoom-in"></i>
           </span>
-          <span tabindex="0" data-toggle="tooltip" title="Zoom Out" (click)="scaleFn(-1)">
+          <span
+            tabindex="0"
+            data-toggle="tooltip"
+            title="Zoom Out"
+            (click)="scaleFn(-1)"
+          >
             <i class="bi bi-zoom-out"></i>
           </span>
-          <span tabindex="0" data-toggle="tooltip" title="Copy to Clipboard" (click)="copyToClipboardFn()">
+          <span
+            tabindex="0"
+            data-toggle="tooltip"
+            title="Copy to Clipboard"
+            (click)="copyToClipboardFn()"
+          >
             <ng-container *ngIf="isCopied; else notCopied">
               <i class="bi bi-clipboard-check" [style.color]="'blue'"></i>
             </ng-container>
@@ -32,21 +53,42 @@
       </div>
     </div>
     <div class="content">
-     <div class="mt-5 d-flex justify-content-center align-items-center" *ngIf="!loadingComplete" [@spinAnimation]>
-      <mat-spinner color="primary" mode="indeterminate" [value]="1" [diameter]="40">
-      </mat-spinner>
-    </div>
-    <div *ngIf="isCopied" class="copy-notification float-right px-2" [@inOutAnimation]>
-      <p class="m-0">Copied</p>
-    </div>
-        <!-- <iframe *ngIf="pageUrl != null" #iframe [src]="pageUrl" (load)="onIframeLoadFn()" [@iframeAnimation] frameborder="0" width="100%" height="100%"></iframe> -->
-        <iframe #iframe (load)="onIframeLoadFn()" [@iframeAnimation] frameborder="0" width="100%" height="100%" sandbox="allow-forms allow-modals allow-pointer-lock allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts allow-top-navigation"></iframe>
+      <div
+        class="mt-5 d-flex justify-content-center align-items-center"
+        *ngIf="!loadingComplete"
+        [@spinAnimation]
+      >
+        <mat-spinner
+          color="primary"
+          mode="indeterminate"
+          [value]="1"
+          [diameter]="40"
+        >
+        </mat-spinner>
+      </div>
+      <div
+        *ngIf="isCopied"
+        class="copy-notification float-right px-2"
+        [@inOutAnimation]
+      >
+        <p class="m-0">Copied</p>
+      </div>
+      <!-- <iframe *ngIf="pageUrl != null" #iframe [src]="pageUrl" (load)="onIframeLoadFn()" [@iframeAnimation] frameborder="0" width="100%" height="100%"></iframe> -->
+      <iframe
+        #iframe
+        [hidden]="!loadingComplete"
+        [scrolling]="scrolling"
+        frameborder="0"
+        width="100%"
+        height="100%"
+        sandbox="allow-forms allow-modals allow-pointer-lock allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts allow-top-navigation"
+      ></iframe>
     </div>
   </div>
   <div id="title">
     <input
       type="text"
-      value="Frame 1 - Retrieve Transaction from Stellar Network"
+      [value]="FrameTitle"
       aria-label="url"
       disabled
       aria-describedby="basic-addon1"
