--- a/src/app/features/proof-verification/verification-screen/verification-screen.component.css
+++ b/src/app/features/proof-verification/verification-screen/verification-screen.component.css
@@ -1,28 +1,159 @@
+#proofDemoLoaderFrame {
+  height: 260px;
+  max-width: 600px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(250, 249, 249);
+  padding: 10%;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+}
+
+#proofDemoLoaderFrame .card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+#proofDemoLoaderFrame .btn .fa-youtube-play {
+  font-size: 4rem;
+  transition: 1000ms;
+  color: rgb(35, 37, 160);
+  transition-timing-function: ease-in-out;
+}
+
+#proofDemoLoaderFrame .btn .fa-youtube-play:hover {
+  font-size: 4.4rem;
+  color: rgb(20, 18, 141);
+}
+
 #globalInformation {
-    min-height: 32vh;
-    width: 100%;
-    border: 1px solid rgba(204, 204, 204, 0.459);
-    padding: 4% 0% 4% 4%;
-    -webkit-box-shadow: 0px 10px 13px -7px #000000,
-    -50px -49px 0px -28px rgba(0, 0, 0, 0);
-    box-shadow: 0px 10px 13px -7px #000000,
-    -50px -49px 0px -28px rgba(0, 0, 0, 0);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-top: 2vh;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  display: flex;
+  justify-content: flex-start;
+  background-color: white;
+  padding: 2%;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+}
+
+#globalInformation .card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+#globalInformation #frames {
+  height: 100%;
+  width: 100%;
+  margin-top: 10px;
+  overflow-y: hidden;
+  display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
 }
 
 #verificationScreen {
-    height: 64vh;
-    width: 100%;
-    margin-top: 2vh;
-    overflow-y: hidden;
-    overflow-x: scroll;
-    display: flex;
-    justify-content: flex-start;
-    align-items: stretch;
-    padding: 4% 0% 4% 4%;
-    -webkit-box-shadow: -10px 0px 13px -7px #000000,
-    10px 0px 13px -7px #000000,
-    -50px -49px 0px -28px rgba(0, 0, 0, 0);
-    box-shadow: -10px 0px 13px -7px #000000,
-    10px 0px 13px -7px #000000,
-    -50px -49px 0px -28px rgba(0, 0, 0, 0);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-top: 2vh;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  display: flex;
+  justify-content: flex-start;
+  background-color: white;
+  padding: 2%;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+}
+
+#verificationScreen .card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+#verificationScreen #frames {
+  height: 100%;
+  width: 100%;
+  margin-top: 10px;
+  overflow-y: hidden;
+  display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
+}
+
+/* #verificationScreen #frames > * {
+   margin-left: 4%;
+} */
+
+.btnPausePlay {
+  width: 20px !important;
+  height: 20px !important;
+  padding: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.playPause div {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.cs-stepper-label {
+  font-size: 10px !important;
+}
+
+.cs-stepper-circle {
+  font-size: 10px !important;
+}
+
+.cs-stepper-header .line:last-child {
+  display: none;
+}
+
+.success .bs-stepper-circle {
+  background-color: rgb(8, 170, 21);
+}
+
+.glow .bs-stepper-circle {
+  background: #4709d6;
+  box-shadow: 0 0 0 rgba(204,169,44, 0.4);
+  -webkit-animation: glow 2s infinite;
+  -moz-animation: glow 2s infinite;
+  animation: glow 2s infinite;
+}
+
+@-webkit-keyframes glow {
+  0% {
+    -webkit-box-shadow: 0 0 0 0 rgba(100, 44, 204, 0.4);
+  }
+  70% {
+      -webkit-box-shadow: 0 0 0 10px rgba(44, 55, 204, 0);
+  }
+  100% {
+      -webkit-box-shadow: 0 0 0 0 rgba(44, 47, 204, 0);
+  }
+}
+@keyframes glow {
+  0% {
+    -moz-box-shadow: 0 0 0 0 rgba(79, 44, 204, 0.4);
+    box-shadow: 0 0 0 0 rgba(47, 44, 204, 0.4);
+  }
+  70% {
+      -moz-box-shadow: 0 0 0 10px rgba(100, 44, 204, 0);
+      box-shadow: 0 0 0 10px rgba(44, 60, 204, 0);
+  }
+  100% {
+      -moz-box-shadow: 0 0 0 0 rgba(92, 44, 204, 0);
+      box-shadow: 0 0 0 0 rgba(145, 44, 204, 0);
+  }
 }
