--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,12 +1,157 @@
 <app-header></app-header>
 <div class="main-container">
     <div class="container" >
-        <div *ngIf="!loadingComplete">
-            <mat-spinner class="progress-loader" [color]="color" [mode]="mode" [value]="value">
-            </mat-spinner>
+        <div class="row m-4" *ngIf="!loadingComplete">
+                <div class="col-12 ">
+                    <div class="row">
+                        <div class="col-6"> <ngx-skeleton-loader count="1" appearance="line"     [theme]="{ 
+                    'border-radius': '5px',
+                    height: '35px',
+                    'background-color': '#E3EDF4',
+                    border: '1px solid white'
+                  }"></ngx-skeleton-loader> </div> </div> </div>
+            <div class="col-xs-12 col-sm-7 col-md-9 col-lg-10 col-xl-10 ">  <div class="mt-4 item">          
+                <div class="row ">
+                    <div class="col-xs-12 col-sm-5 col-md-5 col-lg-2 col-xl-3 ">
+                        <ngx-skeleton-loader count="1" appearance="line"     [theme]="{ 
+                            'border-radius': '5px',
+                            height: '30px',
+                            'background-color': '#E3EDF4',
+                            border: '1px solid white'
+                          }"></ngx-skeleton-loader>
+                          <ngx-skeleton-loader count="1" appearance="line"     [theme]="{ 
+                            'border-radius': '5px',
+                            height: '20px',
+                            'background-color': '#E3EDF4',
+                            border: '1px solid white'
+                          }"></ngx-skeleton-loader>
+                          <ngx-skeleton-loader count="1" appearance="line"     [theme]="{ 
+                            'border-radius': '5px',
+                            height: '20px',
+                            'background-color': '#E3EDF4',
+                            border: '1px solid white'
+                          }"></ngx-skeleton-loader>
+                          <ngx-skeleton-loader count="1" appearance="line"     [theme]="{ 
+                            'border-radius': '5px',
+                            height: '20px',
+                            'background-color': '#E3EDF4',
+                            border: '1px solid white'
+                          }"></ngx-skeleton-loader>
+                    </div>
+                    <div class="col-xs-12 col-sm-5 col-md-5 col-lg-2 col-xl-3 ">
+                        <ngx-skeleton-loader count="1" appearance="line"     [theme]="{ 
+                            'border-radius': '5px',
+                            height: '30px',
+                            width:'60px',
+                            'background-color': '#E3EDF4',
+                            border: '1px solid white'
+                          }"></ngx-skeleton-loader>
+                          <ngx-skeleton-loader count="1" appearance="line"     [theme]="{ 
+                            'border-radius': '5px',
+                            height: '20px',
+                            'background-color': '#E3EDF4',
+                            border: '1px solid white'
+                          }"></ngx-skeleton-loader>
+                          <ngx-skeleton-loader count="1" appearance="line"     [theme]="{ 
+                            'border-radius': '5px',
+                            height: '20px',
+                            'background-color': '#E3EDF4',
+                            border: '1px solid white'
+                          }"></ngx-skeleton-loader>
+                          <ngx-skeleton-loader count="1" appearance="line"     [theme]="{ 
+                            'border-radius': '5px',
+                            height: '20px',
+                            'background-color': '#E3EDF4',
+                            border: '1px solid white'
+                          }"></ngx-skeleton-loader>
+                    </div>
+                  </div>
+              </div></div>
+            <div class="col-xs-12 col-sm-5 col-md-3 col-lg-2 col-xl-2  align-self-center justify-content-center">  
+                    <div class="mt-4 item">
+                        <ngx-skeleton-loader count="1" appearance="line"     [theme]="{ 
+                            'border-radius': '5px',
+                            height: '50px',
+                            'background-color': '#E3EDF4',
+                            border: '1px solid white'
+                          }"></ngx-skeleton-loader>
+                        <!-- above line will produce the rendering of 5 circles with the pulse animation and the aria-valuetext attribute set with "This item is actually loading..." -->       
+                </div>       
+              </div>
         </div>
-        <div class="row" *ngIf="loadingComplete && !errorOccurred">
-            <div class="col-12 mt-2">
+        <div class="row m-4" *ngIf="!loadingComplete">
+            <div class="col-xs-12 col-sm-7 col-md-9 col-lg-10 col-xl-10">  <div class="mt-4 item">
+                <div class="row ">
+                    <div class="col-xs-12 col-sm-5 col-md-5 col-lg-2 col-xl-3 ">
+                        <ngx-skeleton-loader count="1" appearance="line"     [theme]="{ 
+                            'border-radius': '5px',
+                            height: '30px',
+                            'background-color': '#E3EDF4',
+                            border: '1px solid white'
+                          }"></ngx-skeleton-loader>
+                          <ngx-skeleton-loader count="1" appearance="line"     [theme]="{ 
+                            'border-radius': '5px',
+                            height: '20px',
+                            'background-color': '#E3EDF4',
+                            border: '1px solid white'
+                          }"></ngx-skeleton-loader>
+                          <ngx-skeleton-loader count="1" appearance="line"     [theme]="{ 
+                            'border-radius': '5px',
+                            height: '20px',
+                            'background-color': '#E3EDF4',
+                            border: '1px solid white'
+                          }"></ngx-skeleton-loader>
+                          <ngx-skeleton-loader count="1" appearance="line"     [theme]="{ 
+                            'border-radius': '5px',
+                            height: '20px',
+                            'background-color': '#E3EDF4',
+                            border: '1px solid white'
+                          }"></ngx-skeleton-loader>
+                    </div>
+                    <div class="col-xs-12 col-sm-5 col-md-5 col-lg-2 col-xl-3 ">
+                        <ngx-skeleton-loader count="1" appearance="line"     [theme]="{ 
+                            'border-radius': '5px',
+                            height: '30px',
+                            width:'60px',
+                            'background-color': '#E3EDF4',
+                            border: '1px solid white'
+                          }"></ngx-skeleton-loader>
+                          <ngx-skeleton-loader count="1" appearance="line"     [theme]="{ 
+                            'border-radius': '5px',
+                            height: '20px',
+                            'background-color': '#E3EDF4',
+                            border: '1px solid white'
+                          }"></ngx-skeleton-loader>
+                          <ngx-skeleton-loader count="1" appearance="line"     [theme]="{ 
+                            'border-radius': '5px',
+                            height: '20px',
+                            'background-color': '#E3EDF4',
+                            border: '1px solid white'
+                          }"></ngx-skeleton-loader>
+                          <ngx-skeleton-loader count="1" appearance="line"     [theme]="{ 
+                            'border-radius': '5px',
+                            height: '20px',
+                            'background-color': '#E3EDF4',
+                            border: '1px solid white'
+                          }"></ngx-skeleton-loader>
+                    </div>
+
+                  </div>
+              </div></div>
+            <div class="col-xs-12 col-sm-5 col-md-3 col-lg-2 col-xl-2  align-self-center justify-content-center">  
+                    <div class="mt-4 item">
+                        <ngx-skeleton-loader count="1" appearance="line"     [theme]="{ 
+                            'border-radius': '5px',
+                            height: '50px',
+                            'background-color': '#E3EDF4',
+                            border: '1px solid white'
+                          }"></ngx-skeleton-loader>
+                        <!-- above line will produce the rendering of 5 circles with the pulse animation and the aria-valuetext attribute set with "This item is actually loading..." -->       
+                </div>       
+              </div>
+        </div>
+        <div class="row justify-content-md-center align-items-center" *ngIf="loadingComplete && !errorOccurred">
+            <div class="col-12 align-self-center mt-2">
                 <div class="row mb-1">
                     <div class="col-12">
                         <div class="pl-3">
@@ -15,9 +160,12 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 mt-0">
-                <app-card class="col-12" *ngFor="let item of results  | paginate: {itemsPerPage:perPage, currentPage:page, totalItems:NoPage*perPage }" [transactionData]="item"></app-card>
-                <pagination-controls class="text-center" (pageChange) = "onChangePage($event)" autoHide = "true" ></pagination-controls>
+            <div class="col-12 align-self-center mt-0">
+                <app-card class="col-12" *ngFor="let item of results  | paginate: {id:'paginateId', itemsPerPage:perPage, currentPage:page, totalItems:totalRecords }" [transactionData]="item"></app-card>
+               
+            </div>
+            <div class="col-12 align-self-center paginationControl">
+              <pagination-controls clas=""  maxSize='6' autoHide="true"  responsive="true" id='paginateId' class="text-center"  diractionLinks="true" (pageChange) = "onChangePage($event)"  ></pagination-controls>
             </div>
         </div>
         <div class="row content-area" *ngIf="loadingComplete && errorOccurred">
