--- a/src/app/features/proofs/poe/proof-poe.component.html
+++ b/src/app/features/proofs/poe/proof-poe.component.html
@@ -80,14 +80,7 @@
           </h2>
         </div>
       </div>
-       <!-- get it validated -->
-      <div class="row  mr-2 align-self-center ">
-        <div class="col-12 text-center pb-2 align-self-center" style="text-decoration: underline;font-size: 15px;">
-          <a href="#" class="" data-toggle="modal" data-target="#myModal">
-            Get it validated by yourself
-          </a>
-        </div>
-      </div>
+
     </div>  
       <div class="row mb-3 mt-3 ">
         <div class="col-12 col-md-12 ">
@@ -288,6 +281,13 @@
           {{transactionData.BlockchainName}}
         </div>
       </div>
+             <div class="row justify-content-end">
+              <div class="col-5 text-right" style="text-decoration: underline;font-size: 15px;">
+                <a href="#" class="" data-toggle="modal" data-target="#myModal">
+                  Get it validated by yourself
+                </a>
+              </div>
+            </div>
     </div>
 
 
