--- a/src/app/features/transaction-details/transaction-details.component.html
+++ b/src/app/features/transaction-details/transaction-details.component.html
@@ -4,8 +4,8 @@
     <mat-spinner class="progress-loader" [color]="color" [mode]="mode" [value]="value">
     </mat-spinner>
   </div>
-  <div class="container mt-5" *ngIf="loadingComplete && !errorOccurred">
-    <div class="row mb-3">
+  <div class="container mt-3" *ngIf="loadingComplete && !errorOccurred">
+    <div class="row mb-2">
       <div class="col-12">
         <div class="row">
         <div class="mr-3 ml-3 "><span  (click)="goBack()">   <i class="fas fa-angle-left clickableAwesomeFont" style="font-size: 30px;"></i></span></div>
@@ -13,23 +13,21 @@
       </div>
       </div>
     </div>
-
-    <div class="col-xs-12 col-md-12 pb-3 mt-5" *ngIf="tdpImages.length > 0">
+    <div class="col-12 col-md-12 pb-3 ml-0 pt-md-4 pl-md-4 pr-md-4" style="background-color: white;">
+    <div class="col-xs-12 col-md-12 pb-3 mt-3" *ngIf="tdpImages.length > 0">
       <div class="row mt-2">
-        <div class="col-12">
-          <div style="text-align:center;">
+        <div class="col-xs-12 col-md-12 col-lg-12 text-center">
             <owl-carousel-o [options]="customOptions">
               <ng-template carouselSlide *ngFor="let image of tdpImages">
-                <div style="height: 200px;">
-                  <img style="width: auto; max-height: 100%; object-fit: contain;" [src]="image.image" />
+                <div>
+                  <img class="img-thumbnail" style="background: none; border: none; width:100%;height: 300px; object-fit: contain;" [src]="image.image" />
                 </div>
               </ng-template>
             </owl-carousel-o>
-          </div>
         </div>
       </div>
     </div>
-    <div class="col-12 col-md-12 pb-3 ml-0 pt-md-4 pl-md-4 pr-md-4" style="background-color: white;">
+  
     <div class="col-xs-12 col-md-12 mt-3 mt-md-4">
       <div class="col-xs-12 col-md-12 text-left  pb-1"
         style="background-color: white; border-bottom: 0.5px solid #dee2e6;">
