--- a/src/app/features/proofs/poe/proof-poe.component.html
+++ b/src/app/features/proofs/poe/proof-poe.component.html
@@ -74,7 +74,8 @@
     </div>
     </div>
     <div class="mb-3" style="background-color: #fff;">
-      <div class="d-flex justify-content-between m-2">
+      <div class="row align-self-center ">
+        <div class="col-xs-12 col-sm-12 col-md-8 col-lg-9 mb-2">
         <div class="pt-2 pb-2 pl-3 ml-2 row no-gutters status-border {{ hashesMatch ? 'matched' : 'not-matched'}} ">
           <div class="card-topic col-md-12 col-sm-12 col-xs-12 text-left pt-sm-2 pt-2 pb-sm-1 pb-1">
             <h2 style="font-weight: 500;color: #2D2F39;font-size: 24px;">
@@ -84,11 +85,10 @@
             </h2>
           </div>
         </div>
-        <div class="row  align-self-center ">
-          <div class="col-12 text-right align-self-center">
+      </div>
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-3 align-self-center text-center">  
         <button type="button" class="btn btn-outline-primary" (click)="isCollapsed = !isCollapsed"[attr.aria-expanded]="!isCollapsed" aria-controls="collapseshowResult">Show Result <i class="fas ml-5 fa-caret-down"
           style="font-size: 18px;"></i></button>
-        </div>
       </div>
       </div>  
     <div class="showResult">       
