--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -5,20 +5,18 @@
             <mat-spinner class="progress-loader" [color]="color" [mode]="mode" [value]="value">
             </mat-spinner>
         </div>
-        <div class="row" *ngIf="loadingComplete && !errorOccurred">
-            <div class="col-12 mt-2">
-                <div class="row mb-1">
-                    <div class="col-12">
-                        <div class="pl-3">
+        <div class="row"  *ngIf="loadingComplete && !errorOccurred">
+            <div class="col-sm-12 col-md-12 col-lg-12 mt-2">
+                <div class="row titleMargin" >        
                         <h4>Recent Transactions</h4>
-                    </div>
-                    </div>
                 </div>
             </div>
-            <div class="col-12 mt-0">
-                <app-card class="col-12" *ngFor="let item of results  | paginate: {itemsPerPage:perPage, currentPage:page, totalItems:NoPage*perPage }" [transactionData]="item"></app-card>
-                <pagination-controls class="text-center" (pageChange) = "onChangePage($event)" autoHide = "true" ></pagination-controls>
+            <div class="col-sm-12 col-md-12 col-lg-12 mt-0">
+                <app-card class="col-sm-12 col-md-12 col-lg-12" *ngFor="let item of results  | paginate: {itemsPerPage:perPage, currentPage:page, totalItems:NoPage*perPage }" [transactionData]="item"></app-card> 
             </div>
+            <div class="col-sm-12 col-md-12 col-lg-12 text-center">
+                <pagination-controls  style="margin: 0!important;" (pageChange) = "onChangePage($event)" autoHide = "true" ></pagination-controls> 
+            </div>     
         </div>
         <div class="row content-area" *ngIf="loadingComplete && errorOccurred">
             <app-error-id [errorType]="error.errorType" [errorTitle]="error.errorTitle"
