--- a/src/app/features/search-page/card/card.component.css
+++ b/src/app/features/search-page/card/card.component.css
@@ -15,17 +15,18 @@
 }
 
 .contentMargin{
-    margin-top: 5px;
-    margin-bottom: 5px;
+    margin-top: 2px;
+    margin-bottom: 2px;
 }
 
 .btnFixSize{
     width: 150px !important;
+    font-size: 13px;
     margin-right: 14px;
 }
 
 .cardcontent{
-    font-size: 15px;
+    font-size: 14px;
     font-weight: 460;
 }
 
@@ -39,7 +40,11 @@
 
 .fieldStyle{
     font-weight: 600; 
-    font-size:16px;
+    font-size:15px;
+}
+
+.productName{
+    font-size: 16px;
 }
 
 @media screen and (max-width: 1200px) {
@@ -54,7 +59,8 @@
        
     }
     .cardcontent{
-        font-size: 15px;
+        font-size: 13px;
+        font-weight: 460;
     }
 }
 
@@ -65,7 +71,8 @@
     }
 
     .cardcontent{
-        font-size: 14px;
+        font-size: 13px;
+        font-weight: 460;
     }
 }
 
