hit fix for tillit search page

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -7,8 +7,8 @@
         </div>
         <div class="row"  *ngIf="loadingComplete && !errorOccurred">
             <div class="col-sm-12 col-md-12 col-lg-12 mt-2">
-                <div class="row titleMargin" >        
-                        <h4>Recent Transactions</h4>
+                <div class="row mt-1 titleMargin" >        
+                        <h5>Recent Transactions</h5>
                 </div>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-12 mt-0">
