--- a/src/app/shared/components/searchbar/searchbar.component.html
+++ b/src/app/shared/components/searchbar/searchbar.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid search-bar">
-    <div class="row w-100">
+    <div class="row">
       <div class="col-12 d-block d-lg-none text-right pt-2 pb-2">
         <button class="icon-only-btn" style="color: #3d3d3d; font-size: 18px;" (click)="popSearch = true"><span class="fa fa-search"></span></button>
       </div>
