--- a/src/app/features/proof-verification/components/site-screen/site-screen.component.css
+++ b/src/app/features/proof-verification/components/site-screen/site-screen.component.css
@@ -1,17 +1,14 @@
 @import "~bootstrap-icons/font/bootstrap-icons.css";
 
 :host {
-  width: 100%;
+  width: 96%;
   /* flex-grow: 1; */
   flex: none;
+  margin-right: 4%;
   min-width: auto;
   overflow: hidden;
-  /* resize: horizontal; */
+  resize: horizontal;
   position: relative;
-}
-
-:host:not(:first-child) {
-  margin-left: 3%;
 }
 
 .copy-notification {
@@ -32,7 +29,7 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  /* resize: horizontal; */
+  resize: horizontal;
 }
 
 #browser {
@@ -114,7 +111,6 @@
 
   color: white;
   font-size: 12px;
-  min-height: 32px;
   display: flex;
   width: 100%;
   justify-content: flex-start;
@@ -128,7 +124,7 @@
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   :host {
-    /* width: 96%; */
+    width: 96%;
   }
 }
 
@@ -145,7 +141,7 @@
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
   :host {
-    /* width: 46%; */
+    width: 46%;
   }
 }
 
